# mcp-hub

./: .gitignore  AGENTS.md  README.md  mise.toml  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
api-finder-mcp/: README.md  package-lock.json
api-finder-mcp/src/tools/: SearchPublicDataAPITool.ts
docs/: config-locations.md  remote-http.md  repository-guidelines.md  server-package-structure.md  usage.md
docs/superpowers/plans/: 2026-07-09-mcp-hub-implementation.md
docs/superpowers/specs/: 2026-07-09-mcp-hub-design.md
examples/: README.md  antigravity-all.mcp.json  antigravity-local.mcp.json  antigravity-postgres.mcp.json  antigravity-remote.mcp.json  claude-all.json  claude-api-finder.json  claude-code-remote.mcp.json  claude-local.json  codex-all.config.toml  codex-local.config.toml  codex-postgres.config.toml  codex-remote.config.toml  cursor-all.mcp.json  cursor-local.mcp.json  cursor-remote.mcp.json  cursor-shortcuts.mcp.json
legacy/api-finder-mcp/: package.json
legacy/api-finder-mcp/src/: index.ts
legacy/api-finder-mcp/swagger/: search-api.json
legacy/database/pg-mcp/: .env.example  .gitignore  README.md  pyproject.toml
legacy/database/pg-mcp/examples/: global_settings.json  multi_db_settings.json
legacy/database/pg-mcp/src/pg_mcp/: __init__.py  __main__.py  config.py  db.py  server.py  tools.py
legacy/shortcut-mcp/: README.md
shortcut-mcp/: package-lock.json  package.json  tsconfig.json
shortcut-mcp/src/: server.ts
shortcut-mcp/src/data/: categories.ts  shortcuts.ts
shortcut-mcp/src/mcp/: sdk.ts
(+3 files in other folders)
