[project]
name = "pg-mcp"
version = "0.1.0"
description = "PostgreSQL MCP 서버 - AI 에이전트가 DB에 직접 접근할 수 있게 해주는 MCP 서버"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]

[project.scripts]
pg-mcp = "pg_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_mcp"]
